# cmake-training

./: README.md
0.source-multiple/: README.md  table.cpp
0.source-single/: README.md  table.cpp
1.cmake-add_executable/: CMakeLists.txt  README.md
2.cmake-add_library-static/: README.md
2.cmake-add_library-static/multiple/: CMakeLists.txt
3.1.cmake-add_library-interface/: CMakeLists.txt  README.md
3.1.cmake-add_library-interface/multiple/: CMakeLists.txt  multiple.hpp
3.2.cmake-add_library-without-project/: CMakeLists.txt
4.cmake-add_custom_command/: CMakeLists.txt  README.md
4.cmake-add_custom_command/multiple/: CMakeLists.txt
5.cmake-add_custom_target/: CMakeLists.txt  README.md
6.1.cmake-generator-expression-reading-from-file/: CMakeLists.txt  README.md  version.txt
6.cmake-generator-expression/: CMakeLists.txt  README.md  table.cpp
7.cmake-file-copy/: CMakeLists.txt  README.md
